Fix parallel processing bug and add S3/HTTP streaming support
Changes:
- Fix critical bug in processChromosome where resultmap was being
  copied with accumulated counts, causing count multiplication
- Add explicit BAM index URL support via -i/--bam-index option
- Add chromosome-level parallelization with -T/--threads-per-file
- Replace BamTools with htslib for better URL streaming support
- Add .gitignore to exclude build artifacts

The parallel processing bug caused incorrect read counts when using
multiple threads. Each chromosome thread was receiving a copy of
the result map that already contained unmapped read counts, then
adding them back, multiplying counts by the number of threads.

--- a/src/Telseq/Makefile.am
+++ b/src/Telseq/Makefile.am
@@ -3,7 +3,14 @@ bin_PROGRAMS = telseq
 telseq_CPPFLAGS = \
 	-I$(top_srcdir)/Util
 
+telseq_CXXFLAGS = \
+	-pthread
+
+telseq_LDFLAGS = \
+	-pthread
+
 telseq_LDADD = \
-	$(top_builddir)/Util/libutil.a
+	$(top_builddir)/Util/libutil.a \
+	-lhts
 
 telseq_SOURCES = telseq.cpp telseq.h 
